--- a/index.html
+++ b/index.html
@@ -945,10 +945,55 @@
   }
 }
 
+
+#setup-wizard button {
+  background:#0078d4;
+  color:#fff;
+  border:none;
+  padding:10px 20px;
+  margin-top:20px;
+  border-radius:6px;
+  cursor:pointer;
+  font-size:14px;
+}
+#setup-wizard input {
+  padding:8px;
+  width:200px;
+  margin-top:10px;
+  border-radius:4px;
+  border:1px solid #ccc;
+}
+#loading-bar {
+  width:200px;
+  height:10px;
+  background:#333;
+  margin:10px auto;
+  position:relative;
+}
+#loading-bar::after {
+  content:"";
+  position:absolute;
+  top:0;left:0;
+  width:0%;
+  height:100%;
+  background:#0078d4;
+  animation:loadingAnim 2s infinite;
+}
+@keyframes loadingAnim {
+  0% { width:0%; }
+  50% { width:100%; }
+  100% { width:0%; }
+}
+
   </style>
   <style id="theme-style"></style>
 </head>
 <body>
+
+  <!-- Setup Wizard Container -->
+  <div id="setup-wizard" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:#0b1020;color:#fff;z-index:9999;flex-direction:column;justify-content:center;align-items:center;text-align:center;font-family:sans-serif;">
+    <!-- Dynamic content will be injected by JS -->
+  </div>
 
   <!-- login -->
   <div id="login-overlay">
@@ -5499,6 +5544,109 @@ function toggleSearchPanel() {
     searchPanel.classList.add("visible");
     searchInput.focus();
     searchResults.innerHTML = "";
+  }
+}
+
+      
+document.addEventListener("DOMContentLoaded", () => {
+  const setupState = JSON.parse(localStorage.getItem("agreement_done") || "{}");
+  if (setupState.status !== "complete") {
+    showSetupWizard(setupState.step || 1);
+  }
+});
+
+function showSetupWizard(step) {
+  const container = document.getElementById("setup-wizard");
+  container.style.display = "flex";
+
+  if (step === 1) {
+    container.innerHTML = `
+      <h1>Welcome to your setup</h1>
+      <p>Click continue to start configuring your experience.</p>
+      <button id="setup-continue">Continue</button>
+    `;
+    document.getElementById("setup-continue").onclick = () => {
+      localStorage.setItem("agreement_done", JSON.stringify({ status: "incomplete", step: 2 }));
+      location.reload();
+    };
+  }
+
+  if (step === 2) {
+    container.innerHTML = `
+      <h2>Loading agreement...</h2>
+      <div id="loading-bar"></div>
+      <div id="agreement-frame" style="margin-top:20px;text-align:left;max-width:400px;"></div>
+    `;
+    fetchAgreement();
+  }
+
+  if (step === 3) {
+    container.innerHTML = `
+      <h2>Enter your username</h2>
+      <input id="username-input" placeholder="Your name" />
+      <button id="finish-setup">Finish</button>
+    `;
+    document.getElementById("finish-setup").onclick = () => {
+      const name = document.getElementById("username-input").value.trim();
+      if (name) {
+        updateUserName(name);
+        localStorage.setItem("agreement_done", JSON.stringify({ status: "complete" }));
+        container.remove();
+      }
+    };
+  }
+}
+
+async function fetchAgreement(retries = 0) {
+  try {
+    const res = await fetch("https://alaricholt677.github.io/en-us/agreement.json");
+    const text = await res.text();
+    if (!text && retries < 10) {
+      setTimeout(() => fetchAgreement(retries + 1), 1000);
+      return;
+    }
+    if (!text) {
+      document.getElementById("agreement-frame").textContent = "err: timed out";
+      return;
+    }
+    renderAgreement(text);
+    const nextBtn = document.createElement("button");
+    nextBtn.textContent = "Next";
+    nextBtn.onclick = () => {
+      localStorage.setItem("agreement_done", JSON.stringify({ status: "incomplete", step: 3 }));
+      location.reload();
+    };
+    document.getElementById("agreement-frame").appendChild(nextBtn);
+  } catch {
+    if (retries < 10) {
+      setTimeout(() => fetchAgreement(retries + 1), 1000);
+    } else {
+      document.getElementById("agreement-frame").textContent = "err: timed out";
+    }
+  }
+}
+
+function renderAgreement(raw) {
+  const frame = document.getElementById("agreement-frame");
+  const lines = raw.split("\n");
+  lines.forEach(line => {
+    try {
+      const obj = JSON.parse(line);
+      const span = document.createElement("span");
+      span.textContent = obj.text;
+      span.style.color = obj.color || "#fff";
+      if (obj.isunderlined === "true") span.style.textDecoration = "underline";
+      frame.appendChild(span);
+      frame.appendChild(document.createElement("br"));
+    } catch {}
+  });
+}
+
+function updateUserName(name) {
+  const data = JSON.parse(localStorage.getItem("win12_aim_fs_state_exe_ctx_full_v3") || "{}");
+  if (data.user) {
+    data.user.name = name;
+    localStorage.setItem("win12_aim_fs_state_exe_ctx_full_v3", JSON.stringify(data));
   }
 }
 
