--- a/index.html
+++ b/index.html
@@ -5598,17 +5598,11 @@ function showSetupWizard(step) {
   // STEP 1: Welcome
   if (step === 1) {
     container.innerHTML = `
-      <div style="position:relative;width:100%;height:100%;">
-        <!-- Animated Paper Airplane -->
-        <svg class="airplane" width="80" height="80" viewBox="0 0 64 64" style="position:absolute;top:20%;left:-100px;animation:flyAcross 6s ease-in-out infinite;">
-          <polygon points="2,32 62,2 42,32 62,62" fill="#0078D4" stroke="#fff" stroke-width="2"/>
-        </svg>
-        <h1 class="fade-in">Welcome to AIM OS Setup</h1>
-        <p class="fade-in">Click continue to start configuring your experience.</p>
-        <div style="margin-top:20px;" class="fade-in">
-          <button id="setup-continue">Continue</button>
-          <button id="setup-skip">Skip</button>
-        </div>
+      <h1 class="fade-in">Welcome to AIM OS Setup</h1>
+      <p class="fade-in">Click continue to start configuring your experience.</p>
+      <div style="margin-top:20px;" class="fade-in">
+        <button id="setup-continue">Continue</button>
+        <button id="setup-skip">Skip</button>
       </div>
     `;
     document.getElementById("setup-continue").onclick = () => {
@@ -5618,24 +5612,13 @@ function showSetupWizard(step) {
     document.getElementById("setup-skip").onclick = finishSetup;
   }
 
-  // STEP 2: Agreement
+  // STEP 2: Agreement (No animation, just text)
   if (step === 2) {
     container.innerHTML = `
       <h2 class="fade-in">Agreement</h2>
-
-      <!-- Reading Animation -->
-      <div style="position:relative;width:100%;height:150px;overflow:hidden;background:#111;margin-top:20px;">
-        <svg id="scrolling-list" width="6000" height="150" xmlns="http://www.w3.org/2000/svg" style="position:absolute;top:0;left:0;">
-          ${generateRects(60)}
-        </svg>
-      </div>
-
-      <!-- Loading Area -->
       <div id="loading-bar" style="width:200px;height:10px;background:#333;margin:20px auto;border-radius:6px;overflow:hidden;">
         <div id="loading-progress" style="height:100%;background:#0078D4;width:0%;"></div>
       </div>
-
-      <!-- Agreement Formatting Area -->
       <div id="agreement-frame" class="fade-in" style="margin-top:20px;text-align:left;max-width:400px;font-size:14px;padding:10px;border-radius:8px;background:#1a1a1a;"></div>
     `;
     fetchAgreement();
@@ -5698,7 +5681,6 @@ async function fetchAgreement(retries = 0) {
     };
     document.getElementById("agreement-frame").appendChild(nextBtn);
 
-    // Add Factory Reset Button
     const resetBtn = document.createElement("button");
     resetBtn.textContent = "Factory Reset";
     resetBtn.style.marginLeft = "10px";
@@ -5731,22 +5713,27 @@ function renderAgreement(raw) {
   });
 }
 
-// Generate Scrolling Rectangles
-function generateRects(count) {
-  let rects = "";
-  for (let i = 0; i < count; i++) {
-    const x = i * 120;
-    rects += `<rect x="${x}" y="40" width="${40 + Math.random() * 80}" height="40" rx="20" ry="20" fill="#0078D4" stroke="#fff" stroke-width="2"/>`;
-  }
-  return rects;
-}
-
 // Update Username
 function updateUserName(name) {
   const data = JSON.parse(localStorage.getItem("win12_aim_fs_state_exe_ctx_full_v3") || "{}");
   if (data.user) {
     data.user.name = name;
     localStorage.setItem("win12_aim_fs_state_exe_ctx_full_v3", JSON.stringify(data));
+  }
+}
+
+// Finish Setup
+function finishSetup() {
+  localStorage.setItem("agreement_done", JSON.stringify({ status: "complete" }));
+  document.getElementById("setup-wizard").remove();
+}
+
+// Factory Reset
+function factoryReset() {
+  if (confirm("Are you sure you want to reset everything? This will erase your username and setup progress.")) {
+    localStorage.removeItem("agreement_done");
+    localStorage.removeItem("win12_aim_fs_state_exe_ctx_full_v3");
+    location.reload();
   }
 }
 
